# trading_lab

./: .gitignore  README.md  _verify_data.py  event_calendar.csv  pyproject.toml  requirements.txt
.claude/: settings.json
dashboard/: package-lock.json  package.json
data/events/: corporate_actions.csv  event_calendar.csv  market_holidays.csv
infrastructure/: db.py
infrastructure/data/: corporate_actions.py  ingestion.py  loader.py  validation.py
infrastructure/features/: calendar.py  session.py  swings.py  vix.py
infrastructure/ml/: __init__.py  anomaly.py  clustering.py  dataset.py  report.py
infrastructure/rs/: build_sector_map.py  compute_rs.py  index_registry.py  membership_source.py  summarize.py
scripts/: backfill_1min.py  backfill_fo_universe.py  backfill_historical.py  backfill_indices.py  backfill_stocks.py  fetch_initial_data.py  generate_token.py  init_db.py  redownload_forcemot.py  run_ml_classifier.py  run_ml_pipeline.py  update_data.py  update_fo_1min.py  verify_backfill.py  verify_fo_data.py
strategies/EntryGeometry/: analytics.py  config.py  geometry.py  pass2_2_report.py  pass2_engine.py  pass2_metrics.py  pass2_report.py  pass2_rolling.py  pass2_tradelog.py  report.py  run_pass1.py  run_pass2.py  run_pass2_2.py
strategies/RFactor/: analytics.py  config.py  daily_leaderboard.py  engine.py  report.py  results_notebook.ipynb  run_backtest.py
strategies/VCF/: config.py  feature_builder.py  run_all_tests.py
strategies/rs_lift/: __init__.py  lift_engine.py  report_gen.py  rs_sanity.py  run_lift_test.py  schema_check.py  test_sql_gen.py
(+102 files in other folders)
