[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading_lab"
version = "0.1.0"
description = "Professional quantitative trading research platform"
requires-python = ">=3.10"
dependencies = [
    "pandas==2.2.3",
    "numpy==2.1.3",
    "scipy==1.14.1",
    "plotly==5.24.1",
    "seaborn==0.13.2",
    "matplotlib==3.10.0",
    "jupyterlab==4.3.4",
    "duckdb==1.1.3",
    "pyarrow==18.1.0",
    "kiteconnect==4.2.0",
    "python-dotenv==1.0.1",
    "tqdm==4.67.1",
    "scikit-learn==1.6.1",
    "lightgbm==4.7.0",
    "xgboost==3.3.0",
    "optuna==4.9.0",
    "shap==0.52.0",
]

[tool.setuptools]
packages = [
    "infrastructure",
    "infrastructure.data",
    "infrastructure.features",
    "infrastructure.ml",
    "infrastructure.ml.classifier",
    "strategies",
    "strategies.VCF",
    "strategies.VCF.tests",
    "strategies.VCF.tests.foundation",
    "strategies.VCF.tests.move_characteristics",
    "strategies.VCF.tests.vix_regime",
    "strategies.VCF.tests.options_simulation",
    "strategies.VCF.tests.framework_performance",
]
